@@ -3,17 +3,12 @@ title: "Monitoring with New Relic"
 url: /developerportal/deploy/setting-up-monitoring-with-new-relic/
 description: "How to install Mendix behind a load balancer for high availability"
 weight: 30
-tags: ["new relic", "on-premises", "monitoring", "setup"]
 #To update these screenshots, you can log in with credentials detailed in How to Update Screenshots Using Team Apps.
 ---
 
-{{% alert color="info" %}}
-<img src="/attachments/china.png" class="d-inline-block" /> For the Simplified Chinese translation, click [中文译文](https://cdn.mendix.tencent-cloud.com/documentation/developerportal/setting-up-monitoring-with-new-relic.pdf).
-{{% /alert %}}
-
 ## 1 Introduction
 
-When setting up a Mendix application on premises, you can set up advanced monitoring with New Relic. This works with both Windows and Linux deployments. It is not supported in the Mendix Cloud.
+When setting up a Mendix application on premises, you can set up advanced monitoring with New Relic. This works with both Windows and Linux deployments. It is not supported in Mendix Cloud.
 
 ## 2 Prerequisites
 
@@ -33,7 +28,7 @@ The configuration section in *m2ee.yaml* should look like this:
 
 ```yml
  javaopts: [
- "-Dfile.encoding=UTF-8", "-XX:MaxPermSize=64M", "-Xmx256M", "-Xms256M",
+ "-Dfile.encoding=UTF-8", "-Xmx256M", "-Xms256M",
  "-Djava.io.tmpdir=/path/to/project/data/tmp",
  "-javaagent:/home/mendix-user/newrelic/newrelic.jar",
  ]
@@ -43,7 +38,7 @@ The configuration section in *m2ee.yaml* should look like this:
 
 Add `-javaagent:/PATH/TO/NEWRELIC.JAR` to your Java arguments in the Windows Service Console:
 
-{{< figure src="/attachments/developerportal/deploy/on-premises-design/setting-up-monitoring-with-new-relic/18580677.png" >}}
+{{< figure src="/attachments/developerportal/deploy/on-premises-design/setting-up-monitoring-with-new-relic/18580677.png" class="no-border" >}}
 
 {{% alert color="info" %}}
 After you restart the application, your data should show up in New Relic. This requires the application to send data to New Relic servers, so your firewalls should be configured to allow for this traffic.
